--- a/fee/assets/css/common.css
+++ b/fee/assets/css/common.css
@@ -119,6 +119,12 @@ h4 {
     justify-content: space-between;
 }
 
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .gap-sm {
     gap: var(--spacing-sm);
 }
