--- a/fee/components/layout/navbar/navbar.css
+++ b/fee/components/layout/navbar/navbar.css
@@ -4,8 +4,11 @@
     display: flex;
     align-items: center;
     box-shadow: var(--shadow-sm);
-    position: sticky;
+    position: fixed;
+    left: 0;
+    right: 0;
     top: 0;
+    width: 100%;
     z-index: 1000;
 }
 
